Added AnKuchen package

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dev.kyubuns.ankuchen": "https://git@github.com/kyubuns/AnKuchen.git?path=Unity/Assets/AnKuchen",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.1",
